--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="card">
-    <h4 class="card-header">Onclick twitter link creator</h4>
+    <h4 class="card-header">One click twitter share link creator</h4>
     <div class="card-body">
         <form id="createLink">
             <div class="form-group">
